@@ -1,11 +1,11 @@
 Package: soiltexture
 Version: 1.2.19
-Date: 2014-09-25
+Date: 2014-09-29
 Title: Functions for soil texture plot, classification and transformation
 Author: Julien MOEYS <jules_m78-soiltexture@yahoo.fr>, contributions from Wei Shangguan.
 Maintainer: Julien MOEYS <jules_m78-soiltexture@yahoo.fr> 
 Depends: R (>= 3.1.1), sp, MASS
-Suggests: xtable, tools
+Suggests: xtable, tools, utils
 Description: "The Soil Texture Wizard" is a set of R functions designed to produce 
     texture triangles (also called texture plots, texture diagrams, texture ternary plots), 
     classify and transform soil textures data. These functions virtually allows to plot any 
